# fluenta

./: AI_USAGE.md  ARCHITECTURE.md  README.md  cross_company_data_mapper_homework.md  docker-compose.yml
mapping-service/: Dockerfile  pom.xml
mapping-service/src/main/java/org/fluenta/mappingservice/: MappingServiceApplication.java
mapping-service/src/main/java/org/fluenta/mappingservice/Util/: MockDataHelper.java
mapping-service/src/main/java/org/fluenta/mappingservice/config/: AppConfig.java
mapping-service/src/main/java/org/fluenta/mappingservice/controller/: MappingController.java
mapping-service/src/main/java/org/fluenta/mappingservice/dto/: MappingDtos.java
mapping-service/src/main/java/org/fluenta/mappingservice/repository/: InMemoryMappingTemplateRepository.java  MappingTemplateRepository.java
mapping-service/src/main/java/org/fluenta/mappingservice/service/: AiSuggestionService.java  MappingService.java  MappingServiceImpl.java  TransformationService.java
mapping-service/src/main/resources/: application.properties
mapping-service/src/test/java/org/fluenta/mappingservice/: MappingServiceApplicationTests.java
mapping-service/src/test/java/org/fluenta/mappingservice/controller/: MappingControllerTest.java
mapping-service/src/test/java/org/fluenta/mappingservice/service/: MappingServiceImplTest.java
validation-service/: .gitignore  Cargo.toml  Dockerfile
validation-service/src/: handler.rs  main.rs  model.rs  validator.rs
