[package]
name = "validation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Az aszinkron futtatókörnyezet
tokio = { version = "1", features = ["full"] }

# A web framework
axum = "0.7"

# JSON szerializáció és deszerializáció
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logolás
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CORS (Cross-Origin Resource Sharing) middleware - fejlesztéshez hasznos
tower-http = { version = "0.5", features = ["cors"] }

# Regex a validációhoz
regex = "1"
http = "1.3.1"